--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a{
 }
 
 body{
-    background-color: #E5D0E3;
+    background-color: #e6cbe4;
     font-family: 'Fredoka One', cursive;
     background-image: url('../img/backgrund.png');
     text-decoration: none;
@@ -34,7 +34,7 @@ nav{
 .logoContainer span{
     font-size: 3vw;
     margin-left: 1vw;
-    color: #633001;
+    color: #712800;
 }
 
 .ItemsContainer{
@@ -56,7 +56,7 @@ nav{
 
 .titleButon{
     display: flex;
-    color: #633001;
+    color: #712800;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -80,7 +80,7 @@ nav{
     transition: background-color 0.5s ease;
     width: 16vw;
     height: 3.5vw;
-    background-color: #D1884F;
+    background-color: #E47C2C;
     border-radius: 2vw;
     align-items: center;
     justify-content: space-between;
@@ -92,7 +92,7 @@ nav{
     transition: background-color 0.5s ease;
     width: 16vw;
     height: 3.5vw;
-    background-color: #b87745;
+    background-color: #D1884F;
     border-radius: 2vw;
     align-items: center;
     justify-content: space-between;
@@ -115,7 +115,7 @@ nav{
 .imagensContainer{
     display: flex;
     font-size: 10vw;
-    color: #633001;
+    color: #712800;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 3vw;
